Added firmwareEntryPointsInMemory files that come from Latex compilation

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-paper.log
-paper.aux
-paper.bbl
-paper.blg
+firmwareEntryPointsInMemory.log
+firmwareEntryPointsInMemory.aux
+firmwareEntryPointsInMemory.bbl
+firmwareEntryPointsInMemory.blg
