Ignore previous version of paper

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ firmwareEntryPointsInMemory.log
 firmwareEntryPointsInMemory.aux
 firmwareEntryPointsInMemory.bbl
 firmwareEntryPointsInMemory.blg
+paper.pdf
+paper.tex
